--- a/lib/dotgen/Makefile.am
+++ b/lib/dotgen/Makefile.am
@@ -4,6 +4,7 @@
 AM_CPPFLAGS = \
 	-I$(top_srcdir) \
         -I$(top_srcdir)/lib/common \
+        -I$(top_srcdir)/lib/pack \
         -I$(top_srcdir)/lib/gvc \
         -I$(top_srcdir)/lib/ortho \
 	-I$(top_srcdir)/lib/cgraph \
