--- a/lib/common/types.h.in
+++ b/lib/common/types.h.in
@@ -294,6 +294,7 @@ typedef enum {NATIVEFONTS,PSFONTS,SVGFONTS} fontname_kind;
 	/* to have subgraphs */
 	int n_cluster;
 	graph_t **clust;	/* clusters are in clust[1..n_cluster] !!! */
+	graph_t *dotroot;
 	node_t *nlist;
 	rank_t *rank;
 	graph_t *parent;        /* containing cluster (not parent subgraph) */
@@ -340,6 +341,7 @@ typedef enum {NATIVEFONTS,PSFONTS,SVGFONTS} fontname_kind;
 #define GD_border(g) (((Agraphinfo_t*)AGDATA(g))->border)
 #define GD_cl_cnt(g) (((Agraphinfo_t*)AGDATA(g))->cl_nt)
 #define GD_clust(g) (((Agraphinfo_t*)AGDATA(g))->clust)
+#define GD_dotroot(g) (((Agraphinfo_t*)AGDATA(g))->dotroot)
 #define GD_comp(g) (((Agraphinfo_t*)AGDATA(g))->comp)
 #define GD_exact_ranksep(g) (((Agraphinfo_t*)AGDATA(g))->exact_ranksep)
 #define GD_expanded(g) (((Agraphinfo_t*)AGDATA(g))->expanded)
