--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -161,6 +161,9 @@ BuildRequires: R-devel swig >= 1.3.33 perl-libs
 %define WEBP 1
 BuildRequires: libwebp-devel
 %endif
+%if %fedora >= 19
+%define SEPARATE_LICENSE 1
+%endif
 %if %fedora >= 22
 %define _GO 1
 BuildRequires: golang >= 1.2 gcc-go
@@ -190,8 +193,10 @@ of graphs (as in nodes and edges, not as in bar-charts).
 
 %files
 %defattr(-,root,root,-)
+%if 0%{?SEPARATE_LICENSE}
 %license COPYING
-%doc AUTHORS ChangeLog NEWS README
+%endif
+%doc COPYING AUTHORS ChangeLog NEWS README
 %exclude %{_bindir}/dot_builtins
 %{_bindir}/acyclic
 %{_bindir}/bcomps
