--- a/lib/edgepaint/Makefile.am
+++ b/lib/edgepaint/Makefile.am
@@ -14,8 +14,10 @@ AM_CPPFLAGS = \
 noinst_HEADERS =  edge_distinct_coloring.h  furtherest_point.h  intersection.h  lab_gamut.h  lab.h  node_distinct_coloring.h
 
 noinst_LTLIBRARIES = libedgepaint_C.la
+lib_LTLIBRARIES = liblab_gamut.la
 
 libedgepaint_C_la_SOURCES = edge_distinct_coloring.c  furtherest_point.c  intersection.c  lab.c  node_distinct_coloring.c
+liblab_gamut_la_SOURCES = lab_gamut.c
 
 EXTRA_DIST = edgepaintlib.vcproj
  
