package man page and pkgconfig data for liblab_gamut

--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -802,8 +802,8 @@ This package contains development files for graphviz-libs.
 %{_mandir}/man3/xdot.3.*
 %{_libdir}/pkgconfig/libxdot.pc
 %{_libdir}/liblab_gamut.so
-#%{_mandir}/man3/lab_gamut.3.*
-#%{_libdir}/pkgconfig/liblab_gamut.pc
+%{_mandir}/man3/lab_gamut.3.*
+%{_libdir}/pkgconfig/liblab_gamut.pc
 %{_mandir}/man3/expr.3.*
 %{_mandir}/man3/pack.3.*
 %exclude %{_libdir}/graphviz/libgvplugin*
