--- a/doc/infosrc/Makefile.old
+++ b/doc/infosrc/Makefile.old
@@ -61,7 +61,7 @@ SGIF = Mcircle.gif Mdiamond.gif Msquare.gif box.gif \
       proteinstab.gif rpromoter.gif rarrow.gif larrow.gif lpromoter.gif
 
 AGIF = a_normal.gif a_inv.gif a_dot.gif a_invdot.gif a_odot.gif \
-       a_invodot.gif a_curve.gif a_none.gif \
+       a_invodot.gif a_curve.gif a_icurve.gif a_none.gif \
        a_tee.gif a_empty.gif a_invempty.gif a_open.gif \
        a_diamond.gif a_odiamond.gif a_box.gif a_obox.gif a_crow.gif \
        a_halfopen.gif a_ediamond.gif a_lteeoldiamond.gif
@@ -75,7 +75,9 @@ A2GIF= aa_box.gif aa_lbox.gif aa_rbox.gif aa_obox.gif aa_olbox.gif aa_orbox.gif\
        aa_normal.gif aa_lnormal.gif aa_rnormal.gif aa_onormal.gif aa_olnormal.gif aa_ornormal.gif\
        aa_tee.gif aa_ltee.gif aa_rtee.gif \
        aa_vee.gif aa_lvee.gif aa_rvee.gif \
-       aa_curve.gif aa_lcurve.gif aa_rcurve.gif
+       aa_curve.gif aa_lcurve.gif aa_rcurve.gif \
+       aa_icurve.gif aa_licurve.gif aa_ricurve.gif
+
        
 
 GIF = $(SGIF) $(AGIF) $(MGIF) $(A2GIF) $(XGIF)
