trying: '-undefined dynamic-lookup' for python extension

--- a/configure.ac
+++ b/configure.ac
@@ -1177,7 +1177,8 @@ else
       else
         PYTHON_PREFIX=`$PYTHON -c "import sys; print sys.prefix"`
         PYTHON_INCLUDES=-I$PYTHON_PREFIX/include/python$PYTHON_VERSION_SHORT
-        PYTHON_LIBS="-lpython$PYTHON_VERSION_SHORT"
+#        PYTHON_LIBS="-lpython$PYTHON_VERSION_SHORT"
+	PYTHON_LIBS="-undefined dynamic_lookup"
         PYTHON_INSTALL_DIR="`$PYTHON $srcdir/config/config_python.py archsitelib`"
         save_CPPFLAGS=$CPPFLAGS
         CPPFLAGS="$CPPFLAGS $PYTHON_INCLUDES"
