--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -164,9 +164,9 @@ BuildRequires: libwebp-devel
 %if %fedora >= 19
 %define SEPARATE_LICENSE 1
 %endif
-%if %fedora >= 20
+%if %fedora >= 21
 %define _GO 1
-BuildRequires: golang >= 1.2 gcc-go
+BuildRequires: golang >= 1.2 gcc-go swig >= 3.0.2
 %endif
 %endif
 
