--- a/plugin/core/Makefile.am
+++ b/plugin/core/Makefile.am
@@ -8,6 +8,11 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/lib/gvc \
 	-I$(top_srcdir)/lib/cgraph \
 	-I$(top_srcdir)/lib/cdt \
+	-I$(top_srcdir)/lib/gvpr \
+	-I$(top_srcdir)/lib/expr \
+	-I$(top_srcdir)/lib/ast \
+	-I$(top_srcdir)/lib/sfio \
+	-I$(top_srcdir)/lib/vmalloc \
 	$(LIBGVC_CFLAGS)
 
 noinst_LTLIBRARIES = libgvplugin_core_C.la
