--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -4,6 +4,6 @@
 SUBDIRS = cdt cgraph pathplan sfio vmalloc ast \
 	vpsc rbtree ortho sparse patchwork expr common \
 	pack xdot label gvc ingraphs topfish glcomp mingle edgepaint \
-	circogen dotgen dotgen2 fdpgen neatogen twopigen sfdpgen osage gvpr
+	circogen dotgen fdpgen neatogen twopigen sfdpgen osage gvpr
 
 EXTRA_DIST = gvc.vcproj gvc.def 
