--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,8 @@
+# do a shallow clone so the initial download doesn't take as long
+clone_depth: 50
+
 build_script:
   - ps: Copy-item C:\projects\graphviz c:\graphviz-ms -recurse
+# download busybox-w32 and save it as wget.exe
+  - ps: (new-object net.webclient).DownloadFile("ftp://ftp.tigress.co.uk/pub/gpl/6.0.0/busybox/busybox.exe", "C:\graphviz-ms\wget.exe")
   - c:\graphviz-ms\windows\build.bat
