--- a/cmd/tools/Makefile.am
+++ b/cmd/tools/Makefile.am
@@ -174,6 +174,8 @@ mm2gv_SOURCES = mm2gv.c matrix_market.c mmio.c
 mm2gv_LDADD = \
 	$(top_builddir)/lib/sparse/libsparse_C.la \
     $(top_builddir)/lib/common/libcommon_C.la \
+    $(top_builddir)/lib/gvc/libgvc_C.la \
+    $(top_builddir)/lib/pathplan/libpathplan_C.la \
 	$(top_builddir)/lib/cgraph/libcgraph.la @MATH_LIBS@
 
 mm2gv.1.pdf: mm2gv.1
