--- a/plugin/neato_layout/Makefile.am
+++ b/plugin/neato_layout/Makefile.am
@@ -45,7 +45,7 @@ libgvplugin_neato_layout_C_la_LIBADD += $(top_builddir)/lib/sfdpgen/libsfdpgen_C
 endif
 
 if WITH_WIN32
-libgvplugin_neato_layout_la_LDFLAGS += -no-undefined
+libgvplugin_neato_layout_la_LDFLAGS += -no-undefined -export-symbols $(top_srcdir)/plugin/neato_layout/gvplugin_neato_layout.def
 libgvplugin_neato_layout_la_LIBADD += $(top_builddir)/lib/cgraph/libcgraph.la $(top_builddir)/lib/cdt/libcdt.la
 endif
 
