--- a/cmd/gvpr/lib/Makefile.am
+++ b/cmd/gvpr/lib/Makefile.am
@@ -3,7 +3,7 @@
 
 gvprdir = $(pkgdatadir)/gvpr
 
-gvpr_DATA = addranks addrings anon attr bb bbox chkclusters \
+gvpr_DATA = addranks addrings anon attr bb bbox bipart binduce chkclusters \
 	cliptree col collapse color cycle dechain deghist \
 	deledges delmulti delnodes depath dijkstra \
 	flatten get-layers-list group indent knbhd \
