restore test for -Tpng:cairo:gd - seems to be a local problem only

--- a/graphs/directed/Makefile.am
+++ b/graphs/directed/Makefile.am
@@ -27,22 +27,24 @@ test:
 		-Tcanon -Tgv -Tplain -Tplain-ext -Txdot \
 		-Tcmap -Tcmapx -Tismap -Timap \
 		-Tjpg -Tpdf -Tfig -Tgif \
-		-Tpng:cairo -Tpng:gd -Tpng:cairo:cairo -Tpng:gd:gd \
+		-Tpng:cairo -Tpng:gd -Tpng:cairo:gd -Tpng:cairo:cairo -Tpng:gd:gd \
 		-Tps -Tps2 -Tps:cairo -Tpdf \
 		-Tsvg -Tsvg:cairo -Tsvgz -Tvrml \
 		-O $(GRAPHS) 
 
-##  FIXME - These broke at some point:   -Tpng:cairo:gd   -Tps:lasi
+##  FIXME - This broke at some point:  -Tps:lasi
 
 ins_test:
 	dot \
                 -Tcanon -Tgv -Tplain -Tplain-ext -Txdot \
                 -Tcmap -Tcmapx -Tismap -Timap \
                 -Tjpg -Tpdf -Tfig -Tgif -Tpng \
-		-Tpng:cairo -Tpng:gd -Tpng:cairo:cairo -Tpng:gd:gd \
+		-Tpng:cairo -Tpng:gd -Tpng:cairo:gd -Tpng:cairo:cairo -Tpng:gd:gd \
                 -Tps -Tps2 -Tps:cairo -Tpdf \
                 -Tsvg -Tsvg:cairo -Tsvgz -Tvrml \
                 -O $(GRAPHS) 
+
+##  FIXME - This broke at some point:  -Tps:lasi
 
 canon:
 	for i in $(GRAPHS); do echo "dot $$i"; \
